--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="johnkagga.me.location"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="johnkagga.me.location"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
@@ -42,6 +43,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="johnkagga.me.location.MainActivity"/>
         </activity>
+
+        <service
+            android:name=".services.DetectedActivitiesIntentService"
+            android:exported="false"/>
     </application>
 
 </manifest>
