--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION"/>
 
     <application
         android:allowBackup="true"
@@ -35,7 +36,7 @@
                 android:value="johnkagga.me.location.MainActivity"/>
         </activity>
         <activity
-            android:name=".ActivityRecognition"
+            android:name=".RecognitionActivity"
             android:label="@string/title_activity_activity_recognition"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
