Created a GeoFence service

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    package="johnkagga.me.location"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest package="johnkagga.me.location"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION"/>
@@ -48,6 +47,16 @@
         <service
             android:name=".services.DetectedActivitiesIntentService"
             android:exported="false"/>
+
+        <activity
+            android:name=".GeoFencingActivity"
+            android:label="@string/title_activity_geo_fencing"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="johnkagga.me.location.MainActivity"/>
+        </activity>
     </application>
 
 </manifest>
